<resources>
    <string name="app_name">ArtApp</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_save">Save</string>
    <string name="challenge_list_number_display">%1$d/%2$d</string>
    <string name="challenge_new">New Challenge</string>
    <string name="challenge_new_add_prompt">Add prompt</string>
    <string name="challenge_new_delete_prompt">Delete prompt</string>
    <string name="challenge_new_name_hint">Challenge name</string>
    <string name="challenge_new_prompts">Prompts:</string>
    <string name="challenges">Challenges</string>
    <string name="hint_description">Description</string>
    <string name="hint_name">Name</string>
    <string name="import_file">File</string>
    <string name="import_file_button">Choose file</string>
    <string name="import_mode">Mode</string>
    <string name="import_mode_add">Add</string>
    <string name="import_mode_full_replace">Replace all</string>
    <string name="import_mode_replace_duplicate">Replace duplicates</string>
    <string name="import_or">OR</string>
    <string name="import_string">Text</string>
    <string name="import_title">Import</string>
    <string name="placeholder_numbers">10/10</string>
    <string name="placeholder_text">Placeholder text</string>
    <string name="settings">Settings</string>
</resources>