<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:progressTint="@color/burnt_orange"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/layout_end_buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="vertical"
            android:padding="16dp"
            android:theme="@style/Theme.MaterialComponents.Light">

            <EditText
                android:id="@+id/edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/challenge_new_name_hint"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minHeight="@dimen/min_height"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edit_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:gravity="bottom"
                android:hint="@string/hint_description"
                android:importantForAutofill="no"
                android:inputType="text|textMultiLine"
                android:lines="4"
                android:minHeight="@dimen/min_height"
                android:singleLine="false" />

            <TextView
                android:id="@+id/text_prompts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/challenge_new_prompts"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/layout_add_prompt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal"
                android:weightSum="8">

                <EditText
                    android:id="@+id/edit_add_prompt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:ems="10"
                    android:hint="@string/hint_name"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:minHeight="@dimen/min_height" />

                <ImageButton
                    android:id="@+id/button_add_prompt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/peach_yellow"
                    android:contentDescription="@string/challenge_new_add_prompt"
                    android:minHeight="@dimen/min_height"
                    android:src="@drawable/round_add_24_dark" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_prompt_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/item_prompt_add" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/layout_end_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/button_cancel"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/sandy_brown"
            android:text="@string/button_save"
            android:textColor="@color/dark_purple"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

