<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/settings_import"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/settings_import_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/import_title"
            android:textColor="@color/dark_purple"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/settings_import_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:orientation="horizontal"
            android:weightSum="8">

            <TextView
                android:id="@+id/import_string_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/import_string"
                android:textColor="@color/burnt_orange"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/import_string_field"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:background="@drawable/rounded_border"
                android:ems="10"
                android:gravity="bottom"
                android:hint="@string/import_string"
                android:importantForAutofill="no"
                android:inputType="text|textMultiLine"
                android:lines="4"
                android:minHeight="@dimen/min_height"
                android:singleLine="false" />

        </LinearLayout>

        <TextView
            android:id="@+id/settings_import_divider_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/import_or"
            android:textSize="24sp" />

        <LinearLayout
            android:id="@+id/settings_import_file"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:orientation="horizontal"
            android:weightSum="8">

            <TextView
                android:id="@+id/import_file_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/import_file"
                android:textColor="@color/burnt_orange"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/import_file_field"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:ems="10"
                android:gravity="bottom"
                android:hint="@string/import_file"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minHeight="@dimen/min_height" />

            <ImageButton
                android:id="@+id/import_file_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/peach_yellow"
                android:contentDescription="@string/import_file_button"
                android:src="@drawable/baseline_attach_file_24" />
        </LinearLayout>

        <View
            android:id="@+id/settings_import_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="8dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:id="@+id/settings_import_mode"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:orientation="horizontal"
            android:weightSum="8">

            <TextView
                android:id="@+id/import_mode_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:contentDescription="@string/import_mode"
                android:text="@string/import_mode"
                android:textColor="@color/burnt_orange"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/import_mode_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:entries="@array/import_modes"
                android:minHeight="@dimen/min_height" />

        </LinearLayout>

        <Button
            android:id="@+id/settings_import_button"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/sandy_brown"
            android:text="@string/import_title" />

    </LinearLayout>

    <View
        android:id="@+id/settings_divider1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />
</LinearLayout>